Logged in to firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "friendlyeats-codelab": "week10transmute"
+    "friendlyeats-codelab": "week10transmute",
+    "tranmutedapp": "new-firebase-tranmutedapp"
   },
   "targets": {},
   "etags": {}
