Changes to transform FriendlyEats to Mythical Menagerie. Inclusive of changes to firestore.indexes.json and firestore.rules.  Also conversion of styles.css with Plan mode. Subsequent Ask mode review revealed some missing changes that were found on detailed human inspection.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "friendlyeats-codelab": "week10transmute",
+    //"friendlyeats-codelab": "week10transmute",
     "tranmutedapp": "new-firebase-tranmutedapp"
   },
   "targets": {},
