--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,10 +1,10 @@
 runConfig:
   minInstances: 0
   maxInstances: 2
-env:
-  - variable: GEMINI_API_KEY
-    secret: GEMINI_API_KEY
-
 #env:
-#  -   variable: GEMINI_API_KEY
-#      secret: projects/928102294489/secrets/GEMINI_API_KEY/versions/1    for mythical key
+#  - variable: GEMINI_API_KEY
+#    secret: GEMINI_API_KEY
+
+env:
+  -   variable: GEMINI_API_KEY
+      secret: projects/928102294489/secrets/GEMINI_API_KEY/versions/1 
